[build-system]
requires = ["setuptools", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-sort"
version = "0.1.2"
authors = [
    {name = "Calvin Sykes", email = "sykescalvin09@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = ["numpy"]
description="Cython interface to parallel sorting routines"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"

[project.urls]
Repository = "https://github.com/calvin-sykes/cython_parallel_sort.git"
