[build-system]
requires = ["setuptools", "setuptools_scm", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-sort"
authors = [
    {name = "Calvin Sykes", email = "sykescalvin09@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = ["numpy"]
description = "Cython interface to parallel sorting routines"
dynamic = ["version"]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/calvin-sykes/cython_parallel_sort.git"

[tool.setuptools_scm]
write_to = "parallel_sort/_version.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]